# professor-selection-tool

./: .gitignore  LICENSE  README.md  package.json  pyproject.toml  run_pipeline.py
.agents/skills/professor_scoring_framework/: SKILL.md
.agents/skills/rmp_scraping/: rmp_schema.md  rmp_scraping.md
.agents/skills/ucf_course_scraping/: ucf_course_scraping_specs.md
.agents/skills/ucf_professor_scraping/: SKILL.md
Frontend/: index.html  package-lock.json  package.json  vite.config.ts
Frontend/src/: App.css  App.tsx  index.css
Frontend/src/__tests__/: Login.test.tsx  Register.test.tsx
backend/: .env  jest.config.js  package-lock.json  package.json  seed.js  server.js
backend/__tests__/: auth.test.js  globalSetup.js  middleware.test.js  professors.test.js  setup.js  stats.test.js  testApp.js  users.test.js
backend/models/: Course.js  Professor.js  User.js
backend/routes/: auth.js  courses.js  professors.js  users.js
backend/utils/: sendEmail.js  syncData.js
course_scraping/: course_scrape_runner.py  main.py
course_scraping/scraper/: course_scraper.py
course_scraping/storage/: data_storage.py
data_fixing/core/: correlator_interface.py  scrubber_interface.py
data_fixing/correlators/: professor_correlator.py
data_fixing/models/: models.py
data_fixing/scrubbers/: rmp_scrubber.py
mobileFiles/: pubspec.yaml
mobileFiles/lib/: main.dart
prof_scraping/: main.py  prof_scrape_runner.py
prof_scraping/scraper/: engine.py
professor_scoring/: models.py  professor_scoring_runner.py
professor_scoring/engine/: engine_factory.py  scoring_engine.py
professor_scoring/global_stats/: average_overall_stat.py
professor_scoring/strategies/: base_strategy.py  combined_difficulty_scorer.py  top_3_tags_scorer.py  would_take_again_scorer.py
rmp_scraping/scraper/: client.py  engine.py  models.py  parser.py  rate_limiter.py  storage.py
scoring-logic/: .gitignore  README.md  run_pipeline.py
scoring-logic/tests/: test_run_pipeline.py
tests/: test_run_pipeline.py
(+202 files in other folders)
